# Rust_ASR

./: .dockerignore  .gitattributes  .gitignore  API_DOCS.md  Cargo.toml  Dockerfile  Dockerfile.en  Dockerfile.uk  README.md  rewrite_client.py  test_asr_ws.py  test_whisper.py
crates/asr-cli/: Cargo.toml
crates/asr-core/src/: config.rs
crates/asr-server/: Cargo.toml
crates/asr-server/src/: main.rs
crates/audio/src/: mel.rs
crates/model-gigaam/src/: model.rs
crates/model-parakeet/src/: config.rs  decoder.rs  encoder.rs  joint.rs  model.rs  tdt.rs
crates/model-whisper/src/: model.rs
examples/: ws_client.py
infra/: Dockerfile.en  Dockerfile.gigaam  Dockerfile.parakeet  Dockerfile.parakeet-multi  Dockerfile.whisper  RUNPOD_CLOUDFLARE.md  runpod-entrypoint.sh
scripts/: convert_parakeet.py  test_ws_client.py
