[package]
name = "asr-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rustasr"
path = "src/main.rs"

# Сервер использует модели только через фасад asr-engine (модельные
# крейты подключаются им транзитивно через feature-gates).
[dependencies]
asr-core.workspace = true
asr-engine = { path = "../asr-engine" }
candle-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

tokio.workspace = true
axum.workspace = true
futures.workspace = true
